force-app/main/default/objects/csuf__c/csuf__c.object-meta.xml
<CustomObject>
    <label>csuf</label>
    <nameField>
        <label>csuf Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>csuf</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>