force-app/main/default/objects/csuf__c/fields/contact_number__c.field-meta.xml
<CustomField>
    <fullName>contact_number__c</fullName>
    <label>contact number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>