force-app/main/default/objects/csuf__c/fields/user__c.field-meta.xml
<CustomField>
    <fullName>user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>csuf</relationshipName>
    <type>Lookup</type>
</CustomField>