force-app/main/default/objects/csuf__c/recordTypes/allience.recordType-meta.xml
<RecordType>
    <fullName>allience</fullName>
    <active>true</active>
    <label>allience</label>
</RecordType>