force-app/main/default/objects/csuf__c/recordTypes/Non_Residents.recordType-meta.xml
<RecordType>
    <fullName>Non_Residents</fullName>
    <active>true</active>
    <label>Non Residents</label>
</RecordType>