force-app/main/default/objects/csuf__c/recordTypes/Residents.recordType-meta.xml
<RecordType>
    <fullName>Residents</fullName>
    <active>true</active>
    <label>Residents</label>
</RecordType>